--- a/TODO
+++ b/TODO
@@ -4,10 +4,10 @@ Simple list of things to do by version
 
 == 0.1
 
-* Basic database structure
+* Basic database structure                  [ done ]
 * Multiple users (admins or owners)
-* Solid models and model specs
-* Documentation
+* Solid models and model specs              [ continuous ]
+* Documentation                             [ continuous ]
 * Configuration samples for bind-dlz
 * Zone/Record Templates
 * Basic API client
