--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@ Simple list of things to do by version
 * Solid models and model specs              [ continuous ]
 * Documentation                             [ continuous ]
 * Configuration samples for bind-dlz
-* Zone/Record Templates
+* Zone/Record Templates                     [ done ]
 * Basic API client
 
 == 0.2
