--- a/TODO
+++ b/TODO
@@ -1,11 +1,14 @@
 == Bind DLZ on Rails TODO
 
-Simple list of things to do by version
+Simple list of things to do by version. This is not authorative, the real list
+will be maintained at the LightHouse tracker.
+
+http://kennethkalmer.lighthouseapp.com/projects/11831-bind-dlz-on-rails/
 
 == 0.1
 
 * Basic database structure                  [ done ]
-* Multiple users (admins or owners)
+* Multiple users (admins or owners)         [ in progress ]
 * Solid models and model specs              [ continuous ]
 * Documentation                             [ continuous ]
 * Configuration samples for bind-dlz
